// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingInvoices component should display invoices 1`] = `
<BillingInvoices
  fetchInvoices={[Function]}
  invoices={
    Immutable.List [
      Immutable.Map {
        id: 123,
        paid: false,
        amount_due: 1000,
        date: 1496701077,
        metadata: Immutable.Map {
          tickets: 10,
        },
      },
      Immutable.Map {
        id: 125,
        paid: true,
        amount_due: 10000,
        date: 1496701077,
        metadata: Immutable.Map {
          tickets: 100,
        },
      },
    ]
  }
>
  <div>
    <h4>
      Invoice history
    </h4>
    <Jn
      responsiveTag="div"
      striped={true}
      tag="table"
    >
      <table
        className="table table-striped"
      >
        <thead>
          <tr>
            <th>
              Date
            </th>
            <th>
              Status
            </th>
            <th>
              Tickets
            </th>
            <th>
              Amount
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              June 5, 2017
            </td>
            <td>
              <Zs
                color="error"
                pill={false}
                tag="span"
              >
                <span
                  className="badge badge-error"
                >
                  Unpaid
                </span>
              </Zs>
            </td>
            <td>
              10
               
            </td>
            <td>
              $10
               
            </td>
          </tr>
          <tr>
            <td>
              June 5, 2017
            </td>
            <td>
              <Zs
                color="success"
                pill={false}
                tag="span"
              >
                <span
                  className="badge badge-success"
                >
                  Paid
                </span>
              </Zs>
            </td>
            <td>
              100
               
            </td>
            <td>
              $100
               
            </td>
          </tr>
        </tbody>
      </table>
    </Jn>
  </div>
</BillingInvoices>
`;

exports[`BillingInvoices component should display loader 1`] = `
<BillingInvoices
  fetchInvoices={[Function]}
  invoices={
    Immutable.Map {
    }
  }
>
  <Loader
    inline={false}
  >
    <div
      className="loader-container"
    >
      <div
        className="loader-inner"
      >
        <i
          className="fa fa-fw fa-circle-o-notch fa-spin"
        />
      </div>
    </div>
  </Loader>
</BillingInvoices>
`;

exports[`BillingInvoices component should load with empty props 1`] = `
<BillingInvoices
  fetchInvoices={[Function]}
  invoices={
    Immutable.Map {
    }
  }
/>
`;
